@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 0.8-1
-Date: 2012-08-22
-Packaged: 2012-08-23 22:20:17 UTC; rforge
+Version: 0.8-3
+Date: 2012-09-28
+Packaged: 2012-09-27 22:20:08 UTC; rforge
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS
@@ -15,5 +15,6 @@ Imports: methods, plyr, reshape, Hmisc
 Suggests: lattice, rgdal, RCurl, XML, SSOAP, XMLSchema
 Repository: CRAN
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 572
-Date/Publication: 2012-08-27 17:23:48
+Repository/R-Forge/Revision: 589
+Repository/R-Forge/DateTimeStamp: 2012-09-27 21:43:38
+Date/Publication: 2012-10-10 21:27:05
